--- a/mpd-sima/PKGBUILD
+++ b/mpd-sima/PKGBUILD
@@ -7,7 +7,7 @@ _pyname=MPD_sima
 pkgver=0.15.1
 pkgrel=1
 pkgdesc="Automagically add title to mpd playlist based on last.fm recomendations"
-arch=('any')
+arch=('x86_64' 'armv7h')
 url="http://kaliko.me/code/mpd-sima/"
 license=('GPL')
 depends=('python>=3.2' 'python-musicpd>=0.4.1' 'python-requests>=2.4.0')
