--- a/mympd/PKGBUILD
+++ b/mympd/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=mympd
 _pkgname=myMPD
-pkgver=5.5.3
+pkgver=5.7.2
 pkgrel=1
 pkgdesc="myMPD is a standalone and mobile friendly web mpdclient."
 arch=('x86_64' 'armv7h' 'aarch64')
@@ -17,24 +17,22 @@ optdepends=('libmediainfo')
 provides=()
 conflicts=()
 replaces=()
+backup=('etc/webapps/mympd/mympd.conf')
 install=mympd.install
-source=("https://github.com/jcorporation/${_pkgname}/archive/v${pkgver}.tar.gz"
+source=("https://github.com/jcorporation/${_pkgname}/archive/v.${pkgver}.tar.gz"
         'mympd.install')
-sha256sums=('48009064371a03ad9bd97caff08b5e3f4642ff4008814c860e343a0a79b4962a'
-            '44d7816082ab84e7790205102455d6693484cadac40a8daddee99f7d97874658')
+sha256sums=('1335ba7356b4c9ae92b96b9f7f668120b1104f6384011962ffb92f9b3705b1ba'
+            '4bb623f7a0c5df138becfc880048ef46fb409d909f31c1e31f38dd5a25852e8a')
 
 build() {
-  export ARCHLINUX=true
-  cd "${srcdir}/${_pkgname}-${pkgver}"
-  [ -d release ] || mkdir release
-  cd release
+  cd "${srcdir}/${_pkgname}-v.${pkgver}" || exit 1
+  install -d release
+  cd release || exit 1
   cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr -DCMAKE_BUILD_TYPE=RELEASE ..
   make
 }
 
 package() {
-  cd "${srcdir}/${_pkgname}-${pkgver}/release"
+  cd "${srcdir}/${_pkgname}-v.${pkgver}/release"
   make DESTDIR="$pkgdir/" install
-
-  install -Dm644  "${srcdir}/${_pkgname}-${pkgver}/contrib/mympd.service" "$pkgdir/usr/lib/systemd/system/mympd.service"
 }
