--- a/ffmpeg-rpi-audio/PKGBUILD
+++ b/ffmpeg-rpi-audio/PKGBUILD
@@ -10,7 +10,7 @@
 _pkgname=ffmpeg
 pkgname=ffmpeg-rpi-audio
 pkgver=4.2.2
-pkgrel=1
+pkgrel=2
 epoch=1
 pkgdesc='The FFmpeg minimal audio toolkit optimized for headless raspberry pi systems'
 arch=('armv7h')
@@ -54,9 +54,15 @@ source=(git+https://git.ffmpeg.org/ffmpeg.git#tag=192d1d34eb3668fa27f433e9603634
 sha256sums=(SKIP)
 
 pkgver() {
-  cd ffmpeg
+  cd ${_pkgname}
 
   git describe --tags | sed 's/^n//'
+}
+
+prepare() {
+  cd ${_pkgname}
+
+  git cherry-pick -n dc0806dd25882f41f6085c8356712f95fded56c7
 }
 
 build() {
