--- a/icecast-kh/PKGBUILD
+++ b/icecast-kh/PKGBUILD
@@ -4,7 +4,7 @@ pkgname=icecast-kh
 pkgver=2.4.0_kh11
 pkgrel=2
 pkgdesc='The KH branche extends the official release of Icecast with features that may be (if found to be working out well) merged into the next official release.'
-arch=('i686' 'x86_64' 'armv7h')
+arch=('x86_64' 'armv7h' 'aarch64')
 url='http://karlheyes.github.com'
 license=('GPL2')
 conflicts=('icecast' 'icecast' 'icecast-svn' 'icecast-kh-git')
