--- a/mpdscribble/PKGBUILD
+++ b/mpdscribble/PKGBUILD
@@ -9,7 +9,7 @@ pkgver=0.22
 pkgrel=14
 pkgdesc='MPD client which submits track info to {Libre,Last}.fm'
 url='https://github.com/MusicPlayerDaemon/mpdscribble'
-arch=('i686' 'x86_64' 'armv6h' 'armv7h')
+arch=('x86_64' 'armv7h' 'aarch64')
 license=('GPL')
 depends=('libsoup' 'glib2' 'libmpdclient')
 install=$pkgname.install
