--- a/cli-visualizer-rpi/PKGBUILD
+++ b/cli-visualizer-rpi/PKGBUILD
@@ -7,7 +7,7 @@ _pkgname="cli-visualizer"
 pkgver=1.8
 pkgrel=8
 pkgdesc="A cli visualizer for mpd built for Raspberry Pi 2/3"
-arch=('armv7h')
+arch=('x86_64' 'armv7h' 'aarch64')
 url="https://github.com/dpayne/cli-visualizer/"
 license=('MIT')
 depends=('ncurses' 'fftw')
