--- a/ffmpeg-rpi-audio/PKGBUILD
+++ b/ffmpeg-rpi-audio/PKGBUILD
@@ -13,7 +13,7 @@ pkgver=4.2.2
 pkgrel=2
 epoch=1
 pkgdesc='The FFmpeg minimal audio toolkit optimized for headless raspberry pi systems'
-arch=('armv7h')
+arch=('x86_64' 'armv7h' 'aarch64')
 url='http://ffmpeg.org/'
 license=('GPL3')
 depends=(
