--- a/mpdas/PKGBUILD
+++ b/mpdas/PKGBUILD
@@ -4,7 +4,7 @@ pkgname=mpdas
 pkgver=0.4.5
 pkgrel=1
 pkgdesc="An AudioScrobbler client for MPD written in C++."
-arch=('i686' 'x86_64' 'armv7h')
+arch=('x86_64' 'armv7h' 'aarch64')
 license=('BSD')
 url="http://50hz.ws/mpdas/"
 depends=('libmpdclient' 'curl')
