--- a/cli-visualizer-rpi/PKGBUILD
+++ b/cli-visualizer-rpi/PKGBUILD
@@ -1,6 +1,7 @@
-# Contributor: dpayne <darby.payne@gmail.com>
-# Maintainer: dpayne <darby.payne@gmail.com>
 # Maintainer: robot <cultofrobots [at] protonmail [dot] com>
+# Website: https://github.com/CultofRobots
+# Based on PKGBUILD from AUR made by the following people:
+# Maintainer: dpayne <darby.payne@gmail.com>
 
 pkgname="cli-visualizer-rpi"
 _pkgname="cli-visualizer"
