--- a/libupnpp/PKGBUILD
+++ b/libupnpp/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: robot <cultofrobots [at] protonmail [dot] com>
 # Website: https://github.com/CultofRobots
-# Based on libupnpp from http://archphile.org
+# Based on libupnpp-archphile from http://archphile.org
 # Maintained by Mike Andonov <info@archphile.org>
 # Contributor: Fabio Loli <loli_fabio@protonmail.com>
 # Contributor: Tristelune <tristelune@archlinux.info>
