--- a/mpdscribble/PKGBUILD
+++ b/mpdscribble/PKGBUILD
@@ -1,4 +1,7 @@
-# Maintainer: jason ryan <jasonwryan@gmail.com>
+# Maintainer: robot <cultofrobots [at] protonmail [dot] com>
+# Website: https://github.com/CultofRobots
+# Based on PKGBUILD from AUR made by the following people:
+# Contributor: jason ryan <jasonwryan@gmail.com>
 # Contributor:  Bartłomiej Piotrowski <nospam@bpiotrowwski.pl>
 # Contributor: Thomas Dziedzic < gostrc at gmail >
 # Contributor: evr <evanroman at gmail>
