--- a/cli-visualizer-rpi/PKGBUILD
+++ b/cli-visualizer-rpi/PKGBUILD
@@ -7,8 +7,8 @@ pkgname="cli-visualizer-rpi"
 _pkgname="cli-visualizer"
 pkgver=1.8
 pkgrel=8
-pkgdesc="A cli visualizer for mpd built for Raspberry Pi 2/3"
-arch=('x86_64' 'armv7h' 'aarch64')
+pkgdesc="A cli visualizer for mpd built for Raspberry Pi 2/3/4"
+arch=('armv7h' 'aarch64')
 url="https://github.com/dpayne/cli-visualizer/"
 license=('MIT')
 depends=('ncurses' 'fftw')
@@ -19,9 +19,9 @@ source=('https://github.com/dpayne/cli-visualizer/archive/v1.8.tar.gz')
 sha256sums=('927e4c18403c7a40397e8698ffefd1b37250be20fa0ec55fda9a82cf9cc8ba51')
 
 build() {
-    cd $_pkgname-$pkgver
-    cmake ./
-    make
+  cd $_pkgname-$pkgver
+  cmake ./
+  make
 }
 
 package() {
