--- a/mpd-headless/PKGBUILD
+++ b/mpd-headless/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: robot <cultofrobots [at] protonmail [dot] com>
 # Website: https://github.com/CultofRobots/
-# Based on official arch linux mpd PKGBUILD made by the following people:
+# Based on official arch linux PKGBUILD made by the following people:
 # Maintainer: Gaetan Bisson <bisson@archlinux.org>
 # Contributor: Angel Velasquez <angvp@archlinux.org>
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
