--- a/upmpdcli/PKGBUILD
+++ b/upmpdcli/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: robot <cultofrobots [at] protonmail [dot] com>
 # Website: https://cultofrobots.net
-# Based on the upmpdcli-archphile PKGBUILD from archphile.org:
+# Based on Mike Andonov's upmpdcli-archphile from http://archphile.org
 # Contributor: Mike Andonov <info [at] archphile [dot] org>
 # Contributor: Mansour Behabadi <mansour [at] oxplot [dot] com>
 # Contributor: Tilman Vatteroth <tilman.vatteroth [at] udo [dot] edu>
