--- a/alsacap/PKGBUILD
+++ b/alsacap/PKGBUILD
@@ -1,8 +1,7 @@
 # Maintainer: robot <cultofrobots [at] protonmail [dot] com>
 # Website: https://cultofrobots.net
-# Based on the following package from AUR:
-# https://aur.archlinux.org/packages/alsacap/
-# Contributer: Mike Andonov <info@archphile.org>
+# Based on Mike Andonov's libupnpp-archphile from http://archphile.org
+# Contributor: Mike Andonov <info@archphile.org>
 
 pkgname=alsacap
 pkgver=0
@@ -16,12 +15,13 @@ source=("http://www.volkerschatz.com/noise/$pkgname.tgz")
 sha256sums=('b90f74e86e853ce4f209ee3f99e395f4f6606dbcd0cdfa1c165d3ea92978cbc2')
 
 build() {
-    cd "$srcdir/$pkgname"
-    make
+  cd "$srcdir/$pkgname"
+  make
 }
+
 package() {
-    cd "$srcdir/$pkgname"
-    sed -i -e 's!/usr/local!'"$pkgdir/usr"! Makefile
-    make install
-    install -D -m 644 LICENSE "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
+  cd "$srcdir/$pkgname"
+  sed -i -e 's!/usr/local!'"$pkgdir/usr"! Makefile
+  make install
+  install -D -m 644 LICENSE "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
 }
