--- a/libnpupnp/PKGBUILD
+++ b/libnpupnp/PKGBUILD
@@ -1,20 +1,20 @@
 # Maintainer: robot <cultofrobots [at] protonmail [dot] com>
 # Website: https://github.com/CultofRobots
-# Based on libupnpp from http://archphile.org
-# Maintained by Mike Andonov <info@archphile.org>
-# Contributor: Fabio Loli <loli_fabio@protonmail.com>
-# Contributor: Tristelune <tristelune@archlinux.info>
+# Based on Mike Andonov's libnpupnp-archphile from http://archphile.org
+# Contributor: Mike Andonov <info [at] archphile [dot] org>
+# Contributor: Fabio Loli <loli_fabio [at] protonmail [dot] com>
+# Contributor: Tristelune <tristelune [at] archlinux [dot] info>
 
 pkgname=libnpupnp
-pkgver=2.1.1
+pkgver=2.2.1
 pkgrel=1
 pkgdesc="an UPnP library derived from the venerable pupnp"
 url="http://www.lesbonscomptes.com/upplay/downloads.html"
 arch=('x86_64' 'armv7h' 'aarch64')
 license=(GPL2)
-depends=(expat)
+depends=(expat libmicrohttpd)
 source=("http://www.lesbonscomptes.com/upmpdcli/downloads/${pkgname}-${pkgver}.tar.gz")
-sha256sums=('bf9df02e24c111f9b810d02deefed9a42083bc149153d9dd8e0f7200bca1758c')
+sha256sums=('da67d4c258d139d476af6b800926cd9cd09ba17d9e9fcfaebe3fb98241b32790')
 
 build(){
   cd "${pkgname}-${pkgver}"
