--- a/mpdas/PKGBUILD
+++ b/mpdas/PKGBUILD
@@ -1,4 +1,7 @@
-# Maintainer: Ranieri Althoff <ranisalt+aur@gmail.com>
+# Maintainer: robot <cultofrobots [at] protonmail [dot] com>
+# Website: https://github.com/CultofRobots
+# Based on PKGBUILD from AUR
+# Contributor: Ranieri Althoff <ranisalt+aur [at] gmail [dot] com>
 
 pkgname=mpdas
 pkgver=0.4.5
@@ -16,28 +19,27 @@ sha256sums=('c9103d7b897e76cd11a669e1c062d74cb73574efc7ba87de3b04304464e8a9ca'
             '0a98de8f69da7cb34dcc4747d4d1bb015d6065779103db724a309b400c3cccb8')
 
 prepare() {
-    cd ${srcdir}/${pkgname}-${pkgver}
+  cd ${srcdir}/${pkgname}-${pkgver}
 
-    sed -i Makefile \
-        -e 's|install -m 644|install -Dm644|' \
-        -e 's|install mpdas ${PREFIX}/bin|install -Dm755 mpdas ${PREFIX}/bin/mpdas|'
+  sed -i Makefile \
+    -e 's|install -m 644|install -Dm644|' \
+    -e 's|install mpdas ${PREFIX}/bin|install -Dm755 mpdas ${PREFIX}/bin/mpdas|'
 }
 
 build() {
-    cd ${srcdir}/${pkgname}-${pkgver}
+  cd ${srcdir}/${pkgname}-${pkgver}
 
-    make PREFIX=/usr CONFIG=/etc
+  make PREFIX=/usr CONFIG=/etc
 }
 
 package() {
-    cd ${pkgname}-${pkgver}
+  cd ${pkgname}-${pkgver}
 
-    make install PREFIX=${pkgdir}/usr MANPREFIX=${pkgdir}/usr/share/man/man1
+  make install PREFIX=${pkgdir}/usr MANPREFIX=${pkgdir}/usr/share/man/man1
 
-    install -Dm644 LICENSE ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE
-    install -Dm644 mpdasrc.example ${pkgdir}/etc/mpdasrc
+  install -Dm644 LICENSE ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE
+  install -Dm644 mpdasrc.example ${pkgdir}/etc/mpdasrc
 
-    install -Dm644 ${srcdir}/mpdas.service ${pkgdir}/usr/lib/systemd/system/mpdas.service
+  install -Dm644 ${srcdir}/mpdas.service ${pkgdir}/usr/lib/systemd/system/mpdas.service
 }
 
-# vim: ft=sh
