Correction: alsacap arch=x86_64

--- a/alsacap/PKGBUILD
+++ b/alsacap/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=0
 pkgrel=7
 pkgdesc="ALSA device capability lister"
 depends=('alsa-lib')
-arch=('armv7h' 'aarch64')
+arch=('x86_64' 'armv7h' 'aarch64')
 license=('custom:ISC')
 url="http://www.volkerschatz.com/noise/alsa.html#alsacap"
 source=("http://www.volkerschatz.com/noise/$pkgname.tgz")
