--- a/libnpupnp/PKGBUILD
+++ b/libnpupnp/PKGBUILD
@@ -6,23 +6,30 @@
 # Contributor: Tristelune <tristelune [at] archlinux [dot] info>
 
 pkgname=libnpupnp
-pkgver=2.2.1
+_pkgname=npupnp-libnpupnp
+pkgver=4.0.3
 pkgrel=1
 pkgdesc="an UPnP library derived from the venerable pupnp"
 url="http://www.lesbonscomptes.com/upplay/downloads.html"
 arch=('x86_64' 'armv7h' 'aarch64')
 license=(GPL2)
 depends=(expat libmicrohttpd)
-source=("http://www.lesbonscomptes.com/upmpdcli/downloads/${pkgname}-${pkgver}.tar.gz")
-sha256sums=('da67d4c258d139d476af6b800926cd9cd09ba17d9e9fcfaebe3fb98241b32790')
+source=("https://framagit.org/medoc92/npupnp/-/archive/${pkgname}-v${pkgver}/${_pkgname}-v${pkgver}.tar.gz")
+sha256sums=('ed7367102315c5f37e99ccadd44ec29e367c4b08cc42e50767a730f88bd2aa18')
+
+prepare() {
+  cd "${_pkgname}-v${pkgver}"
+  ./autogen.sh
+}
 
 build(){
-  cd "${pkgname}-${pkgver}"
+  cd "${_pkgname}-v${pkgver}"
   ./configure --prefix=/usr
   make
 }
 
 package(){
-  cd "${pkgname}-${pkgver}"
+  cd "${_pkgname}-v${pkgver}"
   make DESTDIR="$pkgdir" install
+  install -Dm644 COPYING "${pkgdir}/usr/share/licenses/${pkgname}/COPYING"
 }
