--- a/ffmpeg-rpi-audio/PKGBUILD
+++ b/ffmpeg-rpi-audio/PKGBUILD
@@ -59,6 +59,14 @@ pkgver() {
   git describe --tags | sed 's/^n//'
 }
 
+prepare() {
+  cd ${_pkgname}
+
+  # lavf/mp3dec: don't adjust start time; packets are not adjusted
+  # https://crbug.com/1062037
+  git cherry-pick -n 460132c9980f8a1f501a1f69477bca49e1641233
+}
+
 build() {
   cd ${_pkgname}
 
