--- a/mympd/PKGBUILD
+++ b/mympd/PKGBUILD
@@ -5,13 +5,13 @@
 
 pkgname=mympd
 _pkgname=myMPD
-pkgver=6.4.2
+pkgver=6.5.0
 pkgrel=1
 pkgdesc="A standalone and mobile friendly web mpdclient."
 arch=('x86_64' 'armv7h' 'aarch64')
 url="http://github.org/jcorporation/myMPD"
 license=('GPL')
-depends=('openssl' 'libid3tag' 'flac')
+depends=('openssl' 'libid3tag' 'flac' 'lua')
 makedepends=('cmake')
 optdepends=()
 provides=()
@@ -22,7 +22,7 @@ install=mympd.install
 source=("https://github.com/jcorporation/${_pkgname}/archive/v${pkgver}.tar.gz"
         'mympd.install'
         'mympd.sysusers')
-sha256sums=('9299e59bacbf4e51f47c32537328c4d9bc4d173fe03a94eb30fab0a1ee028a4c'
+sha256sums=('c5e5c7d9fcf0ad1ed320bc2ed8e5de027d915cddf5f7896cf381cd7b53e4fb5e'
             'f32bfd3959be6ffbad555ea439d920f11d9293b104e87437b90093f794f750b3'
             '82894a939c6adbfd5c719615adefb9a54ded1c221dbbd12b9a46cd90e1be8d8c')
 
