--- a/mpd-headless/PKGBUILD
+++ b/mpd-headless/PKGBUILD
@@ -1,7 +1,8 @@
 # Maintainer: robot <cultofrobots [at] protonmail [dot] com>
 # Website: https://github.com/CultofRobots/
-# Based on official arch linux PKGBUILD made by the following people:
-# Maintainer: Gaetan Bisson <bisson@archlinux.org>
+# Based on official arch linux mpd PKGBUILD made by the following people:
+# Maintainer: David Runge <dvzrv@archlinux.org>
+# Contributor: Gaetan Bisson <bisson@archlinux.org>
 # Contributor: Angel Velasquez <angvp@archlinux.org>
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 # Contributor: Damir Perisa <damir.perisa@bluewin.ch>
@@ -10,102 +11,112 @@
 pkgname=mpd-headless
 _pkgname=mpd
 pkgver=0.21.25
-pkgrel=2
-pkgdesc='Flexible, powerful, server-side application for playing music, optimized for headless server'
-url='http://www.musicpd.org/'
-license=('GPL')
+pkgrel=3
+pkgdesc="Flexible, powerful, server-side application for playing music, optimized for headless server."
+url="http://www.musicpd.org/"
+license=('GPL2')
 arch=('x86_64')
-depends=('audiofile' 'avahi' 'curl' 'faad2' 'ffmpeg' 'icu' 'libid3tag' 'libmad' 'libmpdclient' 
-         'libsamplerate' 'libshout' 'libsoxr' 'libvorbis' 'libupnp' 'opus' 'sqlite' 'systemd-libs' 'wavpack' 'yajl' 'zlib')
-makedepends=('boost' 'meson' 'python-sphinx')
+depends=('expat' 'gcc-libs' 'glibc' 'lame' 'libgcrypt' 'libmad' 'libshout'
+         'libsoxr' 'libupnp' 'opus' 'sqlite' 'wavpack' 'yajl' 'zlib')
+makedepends=('alsa-lib' 'audiofile' 'avahi' 'boost' 'curl' 'dbus' 'faad2'
+             'ffmpeg' 'flac' 'icu' 'libid3tag' 'libmpdclient' 'libogg' 'libvorbis'
+             'meson' 'python-sphinx' 'systemd-libs')
 provides=("mpd=$pkgver")
 conflicts=('mpd')
 replaces=('mpd')
-source=("https://www.musicpd.org/download/${_pkgname}/${pkgver%.*}/${_pkgname}-${pkgver}.tar.xz"
-        'tmpfiles.d'
-        'sysusers.d'
-        'mpd.conf')
-sha256sums=('20a0ad01bf327b2dbeb6ae8e1af952cb0de83d2d63fab0fa4b7183a74765c201'
-            '2faa85c12449a5b3ca422ff1c1fa06d057c7e262a74bfa6298c914a92d6f2e7a'
-            '0b74c6e5db08daab3091dc15a6b0c75210ba2f9e98fa074f6cfd605a461056b6'
-            '3706ebed882421bc9d5d9f4fd71dcd261984f56aa5b45945cbf1330fd8aab584')
-backup=('etc/mpd.conf')
+backup=("etc/${_pkgname}.conf")
+source=("https://www.musicpd.org/download/${_pkgname}/${pkgver%.*}/${_pkgname}-${pkgver}.tar.xz"{,.sig}
+        "${_pkgname}.conf"
+        "${_pkgname}.sysusers"
+        "${_pkgname}.tmpfiles")
+sha512sums=('67e0cbf176d18cd63effab0d12b22bea846458cbaa383ead9078c4b5f2a472dbb1d7308af4d6898691e8864a911c808af5ca2c553d8233323b8aaedfdc7189fc'
+            'SKIP'
+            'e1f2cede2aae5500bc473c8a95df28134015fa99b6af781bfe2b5ef57f4624fd4e2e4477d690a6147becab9079934cfe42f1603daa69930a0d9e97393f6f167b'
+            '6e467481406279767b709ec6d5c06dbd825c0de09045c52ffa2d21d0604dcfe19b7a92bf42bed25163d66a3a0d1dbde6185a648b433eaf5eac56be90491e2e18'
+            'db473db27cd68994c3ee26e78e0fb34d13126301d8861563dcc12a22d62ecb14c4ffb1e0798c6aaccdff34e73bae3fbeeff7b42606c901a2d35e278865cdf35d')
+b2sums=('9bc294850ddd2b5e1468d4988179f633c8fec14f7f99ffa2581d1aa30991a85ace8361a558e674f5c4b8e7471c9911dcb1286f61f1d42a2315ad05db4dfd9053'
+        'SKIP'
+        '77102efd67d46f6887057aee0fd3b19582b08219be7b0aa8db47f0094e1f062fbd8eb98c9f4c9ea35be7823653c54280bc5f62e62a4eb62321e9c12507acaeaf'
+        '4ab6e415284c77802a39d0913d701fe55e56f3c22b19557661fbef77e456b5e1d151da4202695282b956602e716a7afdb994aa2fc17368b9a0d0d051d47a3afb'
+        'd7b587c25dd5830c27af475a8fdd8102139d7c8fdd6f04fe23b36be030e4411582e289f575c299255ff8183096f7d47247327276f9a24641cbd032d9675b837a')
+validpgpkeys=('0392335A78083894A4301C43236E8A58C6DB4512') # Max Kellermann <max@blarg.de>
 
 prepare() {
-  cd "${srcdir}/${_pkgname}-${pkgver}"
-  rm -fr build
-  install -d build
+  cd "${_pkgname}-${pkgver}"
+  sed -e '/\[Service\]/a User=mpd' \
+      -i "systemd/system/mpd.service.in"
 }
 
 build() {
-  cd "${srcdir}/${_pkgname}-${pkgver}/build"
-  _opts=('-Ddocumentation=true'
-         # Disabled from official Arch Linux PKGBUILD
-         '-Dchromaprint=disabled' # appears not to be used for anything
-         '-Dsidplay=disabled' # unclear why but disabled in the past
-         '-Dadplug=disabled' # not in an official repo
-         '-Dsndio=disabled' # interferes with detection of alsa devices
-         '-Dshine=disabled' # not in an official repo
-         '-Dtremor=disabled' # Fixed-point vorbis decoder plugin (not in an official repo)
-         # Disabled Network support
-         '-Dipv6=disabled'
-         # Disabled Storage plugins
-         '-Dwebdav=disabled'
-         # Disabled Input plugins
-         '-Dcdio_paranoia=disabled'
-         '-Dmms=disabled'
-         '-Dnfs=disabled' # supports only NFS version 3.
-         '-Dsmbclient=disabled'
-         # Disabled Commercial services
-         '-Dqobuz=disabled'
-         '-Dtidal=disabled'
-         # Disabled Archive plugins
-         '-Dbzip2=disabled'
-         '-Diso9660=disabled'
-         '-Dzzip=disabled'
-         # Disabled Decoder plugins
-         '-Dfluidsynth=disabled'
-         '-Dgme=disabled'
-         '-Dmikmod=disabled'
-         '-Dmodplug=disabled'
-         '-Dmpcdec=disabled'
-         '-Dmpg123=disabled'
-         '-Dsidplay=disabled'
-         '-Dsndfile=disabled'
-         '-Dwildmidi=disabled'
-         # Disabled Encoder plugins
-         #'-Dvorbisenc=disabled' # enabled until opus streams tags properly in icecast
-         '-Dtwolame=disabled'
-         # Disabled Filter plugins
-         '-Dlibsamplerate=disabled'
-         # Disabled Output plugins
-         '-Dao=disabled'
-         '-Djack=disabled'
-         '-Dopenal=disabled'
-         '-Doss=disabled'
-         '-Dpulse=disabled'
-         '-Drecorder=false'
-         # Misc libraries
-         '-Dzeroconf=avahi'
-  )
-  arch-meson .. ${_opts[@]}
-  ninja
+  cd "${_pkgname}-${pkgver}"
+  # NOTE: sndio conflicts with alsa
+  # NOTE: nfs supports only NFS version 3.
+  # NOTE: vorbisenc enabled until opus displays streams tags properly in icecast
+  meson --prefix /usr \
+        --libexecdir lib \
+        --sbindir bin \
+        --buildtype plain \
+        --auto-features enabled \
+        --wrap-mode nodownload \
+        -D b_lto=true \
+        -D b_pie=true \
+        -D documentation=true \
+        -D adplug=disabled \
+        -D sndio=disabled \
+        -D shine=disabled \
+        -D tremor=disabled \
+        -D chromaprint=disabled \
+        -D ipv6=disabled \
+        -D webdav=disabled \
+        -D cdio_paranoia=disabled \
+        -D mms=disabled \
+        -D nfs=disabled \
+        -D smbclient=disabled \
+        -D qobuz=disabled \
+        -D tidal=disabled \
+        -D bzip2=disabled \
+        -D iso9660=disabled \
+        -D zzip=disabled \
+        -D fluidsynth=disabled \
+        -D gme=disabled \
+        -D mikmod=disabled \
+        -D modplug=disabled \
+        -D mpcdec=disabled \
+        -D mpg123=disabled \
+        -D sidplay=disabled \
+        -D sndfile=disabled \
+        -D wildmidi=disabled \
+        -D twolame=disabled \
+        -D libsamplerate=disabled \
+        -D ao=disabled \
+        -D jack=disabled \
+        -D openal=disabled \
+        -D oss=disabled \
+        -D pulse=disabled \
+        -D recorder=false \
+       build
+  ninja -C build
+}
+
+check() {
+  cd "${_pkgname}-${pkgver}"
+  ninja -C build test
 }
 
 package() {
-  cd "${srcdir}/${_pkgname}-${pkgver}/build"
-  DESTDIR="${pkgdir}" ninja install
-  install -Dm644 ../doc/mpdconf.example "${pkgdir}"/usr/share/doc/mpd/mpdconf.example
-  install -Dm644 ../doc/mpd.conf.5 "${pkgdir}"/usr/share/man/man5/mpd.conf.5
-  install -Dm644 ../doc/mpd.1 "${pkgdir}"/usr/share/man/man1/mpd.1
+  depends+=('libFLAC.so' 'libasound.so' 'libaudiofile.so' 'libavahi-client.so'
+            'libavahi-common.so' 'libavcodec.so' 'libavformat.so' 'libavutil.so'
+            'libcurl.so' 'libdbus-1.so' 'libfaad.so' 'libicui18n.so' 'libicuuc.so'
+            'libid3tag.so' 'libmpdclient.so' 'libogg.so' 'libsystemd.so' 'libvorbis.so'
+            'libvorbisenc.so')
+  cd "${_pkgname}-${pkgver}"
+  DESTDIR="${pkgdir}" ninja -C build install
+  install -vDm 644 "doc/${_pkgname}conf.example" \
+    -t "${pkgdir}/usr/share/doc/${_pkgname}/"
+  install -vDm 644 "doc/${_pkgname}.conf.5" -t "${pkgdir}/usr/share/man/man5/"
+  install -vDm 644 "doc/${_pkgname}.1" -t "${pkgdir}/usr/share/man/man1/"
 
-  install -Dm644 ../../tmpfiles.d "${pkgdir}"/usr/lib/tmpfiles.d/mpd.conf
-  install -Dm644 ../../sysusers.d "${pkgdir}"/usr/lib/sysusers.d/mpd.conf
-  install -Dm644 ../../mpd.conf "${pkgdir}"/etc/mpd.conf
-
-  sed \
-    -e '/\[Service\]/a User=mpd' \
-    -e '/WantedBy=/c WantedBy=default.target' \
-    -i "${pkgdir}"/usr/lib/systemd/system/mpd.service
+  install -vDm 644 "../${_pkgname}.conf" -t "${pkgdir}/etc/"
+  install -vDm 644 "../${_pkgname}.sysusers" "${pkgdir}/usr/lib/sysusers.d/${_pkgname}.conf"
+  install -vDm 644 "../${_pkgname}.tmpfiles" "${pkgdir}/usr/lib/tmpfiles.d/${_pkgname}.conf"
 }
-
